--- a/eng.html
+++ b/eng.html
@@ -49,9 +49,9 @@
                             <div data-hook-content="covercontent">
                                 <div class="t182__wrapper">
                                     <h1 class="t182__title t-title t-title_xl" style="" field="title">Курсы английского языка</h1>
-                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Разговорный английский для детей Алматы!</div>
+                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Разговорный английский для детей!</div>
                                     <div class="t182__buttons">
-                                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
+                                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
                                             <table style="width:100%; height:100%;">
                                                 <tr>
                                                     <td>ЗАПИСАТЬСЯ</td>
@@ -98,7 +98,7 @@
                                     <ul>
                                         <li><strong>Возраст:</strong> 7-18 лет</li>
                                         <li><strong>Продолжительность: </strong>4+ месяцев</li>
-                                        <li><strong>Стоимость:</strong> 2500 сом</li>
+                                        <li><strong>Стоимость:</strong> 15000 тенге</li>
                                         <li><strong>Описание:</strong>
                                             Значение английского языка для детей и взрослых в современном мире трудно переоценить.
                                             Каждый успешный человек должен знать его. Курсы английского языка в
@@ -123,7 +123,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
