--- a/prog.html
+++ b/prog.html
@@ -39,8 +39,10 @@
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="725332" data-tilda-page-id="3097596" data-tilda-page-alias="prog" data-tilda-formskey="69cb4bfecd9c0b569717819136c96fe4">
     <div id="rec58489619" class="r t-rec" style=" " data-animationappear="off" data-record-type="205">
         <!-- cover -->
-        <div class="t-cover" id="recorddiv58489619" bgimgfield="img" style="height:100vh; background-image:url('images/tild6238-3063-4234-b233-373130663666__-__resize__20x__1-UcpODv1lxR_Bt3MyaO.jpeg');">
-            <div class="t-cover__carrier" id="coverCarry58489619" data-content-cover-id="58489619" data-content-cover-bg="images/tild6238-3063-4234-b233-373130663666__1-ucpodv1lxr_bt3myao.jpeg" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
+        <div class="t-cover" id="recorddiv58489619"
+             bgimgfield="img" style="height:100vh; background-image:url('images/tild6238-3063-4234-b233-373130663666__-__resize__20x__1-UcpODv1lxR_Bt3MyaO.jpeg');">
+            <div class="t-cover__carrier" id="coverCarry58489619" data-content-cover-id="58489619"
+                 data-content-cover-bg="images/prog2.jpg" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
             <div class="t-cover__filter" style="height:100vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -o-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4c000000', endColorstr='#33000000');"></div>
             <div class="t-container">
                 <div class="t-width t-width_10" style="margin:0 auto;">
@@ -49,9 +51,9 @@
                             <div data-hook-content="covercontent">
                                 <div class="t182__wrapper">
                                     <h1 class="t182__title t-title t-title_xl" style="" field="title">Курсы программирования</h1>
-                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Курсы по программированию для всех Алматы!</div>
+                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Курсы по программированию для всех!</div>
                                     <div class="t182__buttons">
-                                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
+                                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
                                             <table style="width:100%; height:100%;">
                                                 <tr>
                                                     <td>ЗАПИСАТЬСЯ</td>
@@ -98,11 +100,11 @@
                                     <ul>
                                         <li><strong>Возраст:</strong> 7-13</li>
                                         <li><strong>Продолжительность: </strong>3-6 месяцев</li>
-                                        <li><strong>Стоимость:</strong> 2500 сом</li>
+                                        <li><strong>Стоимость:</strong> 15000 тенге</li>
                                         <li><strong>Описание:</strong>  <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">Scratch</span></strong> — это визуальный язык программирования
                                             для детей, разработанный в MIT. Это абсолютно уникальная среда для обучения программированию!
                                             Благодаря <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">Scratch</span></strong> обучение превратится в увлекательное занятие и Дети
-                                            смогут понять азы программирования, создавать игры, анимацию и многое другое. Scratch позволит изучить основы программирования детям любого возраста.</li>
+                                            смогут понять азы программирования, создавать игры, анимацию и многое другое. <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">Scratch</span></strong> позволит изучить основы программирования детям любого возраста.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -122,7 +124,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
@@ -176,7 +178,7 @@
                                     <ul>
                                         <li><strong></strong><strong>Возраст:</strong> 10-15</li>
                                         <li><strong>Продолжительность:</strong> 3-6 месяцев</li>
-                                        <li><strong>Стоимость:</strong> 3000 сом</li>
+                                        <li><strong>Стоимость:</strong> 20000 тенге</li>
                                         <li><strong>Описание:</strong> Сегодня на рынке труда мы наблюдаем настоящий бум на специалистов в области разработки приложений для мобильных устройств.
                                             Профессия разработчика мобильных приложений становится одной из самых востребованных. <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">
                                                 App Inventor</span></strong> — среда визуальной разработки android-приложений, требующая от пользователя минимальных знаний программирования.
@@ -200,7 +202,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
@@ -254,7 +256,7 @@
                                     <ul>
                                         <li><strong></strong><strong>Возраст: </strong>13-18</li>
                                         <li><strong>Продолжительность: </strong>6-12 месяцев</li>
-                                        <li><strong>Стоимость: </strong>4000 сом</li>
+                                        <li><strong>Стоимость: </strong>25000 тенге</li>
                                         <li><strong>Описание:</strong> Язык программирования <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">Python</span></strong> — это мощный
                                             инструмент для создания программ самого разнообразного назначения, доступный даже для новичков. С его помощью можно решать задачи различных типов.
                                             Пройдя наш курс ваш ребенок научится делать чат-ботов, сайты, игры и многое другое. Курс позволит изучить программирование на Python с нуля.</li>
@@ -277,7 +279,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
@@ -331,7 +333,7 @@
                                     <ul>
                                         <li><strong>Возраст: </strong>13-18</li>
                                         <li><strong>Продолжительность</strong>: 6-12 месяцев</li>
-                                        <li><strong>Стоимость: </strong>4000 сом</li>
+                                        <li><strong>Стоимость: </strong>25000 тенге</li>
                                         <li><strong>Описание: </strong>Целью курса является обучение как основополагающим принципам, так и последним тенденциям мира
                                             <strong><span data-redactor-tag="span" style="color: rgb(14, 37, 117);">web-разработки</span></strong>. Осваивая пример за примером, дети научатся самостоятельно
                                             строить как привычные многостраничные сайты, так и современные одностраничные приложения; пользоваться библиотеками для быстрого прототипирования и реализовывать
@@ -355,7 +357,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
