--- a/busi.html
+++ b/busi.html
@@ -40,7 +40,8 @@
     <div id="rec58502190" class="r t-rec" style=" " data-animationappear="off" data-record-type="205">
         <!-- cover -->
         <div class="t-cover" id="recorddiv58502190" bgimgfield="img" style="height:100vh; background-image:url('images/tild3233-6532-4063-a538-623530613764__-__resize__20x__AdobeStock_66749706.png');">
-            <div class="t-cover__carrier" id="coverCarry58502190" data-content-cover-id="58502190" data-content-cover-bg="images/tild3233-6532-4063-a538-623530613764__adobestock_66749706.png" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
+            <div class="t-cover__carrier" id="coverCarry58502190" data-content-cover-id="58502190"
+                 data-content-cover-bg="images/bis2.jpg" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
             <div class="t-cover__filter" style="height:100vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -o-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4c000000', endColorstr='#33000000');"></div>
             <div class="t-container">
                 <div class="t-width t-width_10" style="margin:0 auto;">
@@ -49,9 +50,9 @@
                             <div data-hook-content="covercontent">
                                 <div class="t182__wrapper">
                                     <h1 class="t182__title t-title t-title_xl" style="" field="title">Курсы бизнес-мышление</h1>
-                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Бизнес-мышление для детей в Алматы!</div>
+                                    <div class="t182__descr t-descr t-descr_lg" style="" field="descr">Бизнес-мышление для детей!</div>
                                     <div class="t182__buttons">
-                                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
+                                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;text-transform:uppercase;">
                                             <table style="width:100%; height:100%;">
                                                 <tr>
                                                     <td>ЗАПИСАТЬСЯ</td>
@@ -86,7 +87,7 @@
         <div class="t480">
             <div class="t-container">
                 <div class="t480__top t480__col t-col t-col_6 ">
-                    <div class="t480__blockimg t-bgimg" data-original="images/tild6637-3231-4636-a166-323039313961__image_5aa603456d9e89.jpg" bgimgfield="img" style="background-image:url('images/tild6637-3231-4636-a166-323039313961__-__resizeb__20x__image_5aa603456d9e89.jpg'); height:560px;"></div>
+                    <div class="t480__blockimg t-bgimg" data-original="images/bis1.jpg" bgimgfield="img" style="background-image:url('images/tild6637-3231-4636-a166-323039313961__-__resizeb__20x__image_5aa603456d9e89.jpg'); height:560px;"></div>
                 </div>
                 <div class="t480__col t-col t-col_6 ">
                     <div class="t480__textwrapper t-align_center" style="height:560px;">
@@ -98,7 +99,7 @@
                                     <ul>
                                         <li><strong>Возраст: </strong>13-18 лет</li>
                                         <li><strong data-redactor-tag="strong">Продолжительность: </strong>6-12 месяцев</li>
-                                        <li><strong>Стоимость: </strong>3000 сом</li>
+                                        <li><strong>Стоимость: </strong>20000 тенге</li>
                                         <li><strong>Описание: </strong>Вне зависимости от того кем ребенок хочет стать в будущем, бизнес-мышление,
                                             социальные и предпринимательские навыки пригодятся ему в жизни. И конечно, развивать их необходимо уже с детства. Наш курс поможет выработать в
                                             детях ответственность, критическое мышление и все то, что необходимо будущему предпринимателю. Укрепите его уверенность в себе!</li>
@@ -121,7 +122,7 @@
                 <div class="t-col t-col_10 t-prefix_1 t-align_center">
                     <div class="t580__buttons">
                         <div class="t580__buttons-wrapper t-margin_auto">
-                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t580__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>ЗАПИСАТЬСЯ</td>
