--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPACE SCHOOL | Курсы программирования Алматы</title>
-    <meta name="description" content="Курсы программирования в алматы. Научитесь программировать игры, сайты и приложения с нуля.
+    <meta name="description" content="Курсы программирования в Алматы. Научитесь программировать игры, сайты и приложения с нуля.
     Изучите основы программирования." />
     <meta name="keywords" content="курсы программирования для детей в Алматы, программирование в Алматы, программирование для детей, английский для детей, курсы английского языка для детей в Алматы, английский с нуля, английский для новичков, курсы английского, разговорный английский, а" />
     <meta property="og:url" content="http://spacess.tilda.ws" />
@@ -80,7 +80,7 @@
                                     </div>
                                 </div>
                                 <div class="t415__buttons">
-                                    <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t415__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px;">
+                                    <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t415__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px;">
                                         <table style="width:100%; height:100%;">
                                             <tr>
                                                 <td>ЗАПИСАТЬСЯ</td>
@@ -195,9 +195,12 @@
             </div>
             <div class="t-container">
                 <div class="t608__col t-col t-col_4">
-                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img" data-original="images/tild3461-6163-4364-b332-396537326234__photo530776405851200.jpg" style="background-image: url('images/tild3461-6163-4364-b332-396537326234__-__resizeb__20x__photo530776405851200.jpg');" role="img" aria-label="курсы программирования для детей"></div>
+                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img"
+                         data-original="images/prog1.jpg"
+                         style="background-image: url('images/prog1.jpg');"
+                         role="img" aria-label="курсы программирования для детей"></div>
                     <div class="t608__textwrapper t-align_left">
-                        <div class="t608__title t-heading t-heading_xs" style="" field="title">Курсы программирования в Алматы</div>
+                        <div class="t608__title t-heading t-heading_xs" style="" field="title">Курсы программирования</div>
                         <div class="t608__descr t-descr t-descr_xs" style="" field="descr">Курсы по программированию для всех!</div>
                         <a href="prog.html" target="" class="t608__btn t-btn t-btn_sm" style="color:#0e2575;border:1px solid #0e2575;border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px;">
                             <table style="width:100%; height:100%;">
@@ -209,9 +212,11 @@
                     </div>
                 </div>
                 <div class="t608__col t-col t-col_4">
-                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img2" data-original="images/tild3932-3961-4262-b064-383639653130__adobestock_69887753_.jpg" style="background-image: url('images/tild3932-3961-4262-b064-383639653130__-__resizeb__20x__AdobeStock_69887753_.jpg');" role="img" aria-label="курсы бизнесмышления для детей"></div>
+                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img2"
+                         data-original="images/bis2.jpg"
+                         style="background-image: url('images/bis2.jpg');" role="img" aria-label="курсы бизнесмышления для детей"></div>
                     <div class="t608__textwrapper t-align_left">
-                        <div class="t608__title t-heading t-heading_xs" style="" field="title2">Курсы бизнес-мышления в Алматы</div>
+                        <div class="t608__title t-heading t-heading_xs" style="" field="title2">Курсы бизнес-мышления</div>
                         <div class="t608__descr t-descr t-descr_xs" style="" field="descr2">Бизнес мышление для Ваших детей!</div>
                         <a href="busi.html" target="" class="t608__btn t-btn t-btn_sm" style="color:#0e2575;border:1px solid #0e2575;border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px;">
                             <table style="width:100%; height:100%;">
@@ -223,10 +228,12 @@
                     </div>
                 </div>
                 <div class="t608__col t-col t-col_4">
-                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img3" data-original="images/tild3561-3965-4331-b739-343732663939__child-in-london_1.jpg" style="background-image: url('images/tild3561-3965-4331-b739-343732663939__-__resizeb__20x__Child-in-London_1.jpg');" role="img" aria-label="курсы английского языка для детей"></div>
+                    <div class="t608__bgimg t-margin_auto t-bgimg" data-image-width="360" data-image-height="240" bgimgfield="img3"
+                         data-original="images/eng1.jpg"
+                         style="background-image: url('images/eng1.jpg');" role="img" aria-label="курсы английского языка для детей"></div>
                     <div class="t608__textwrapper t-align_left">
-                        <div class="t608__title t-heading t-heading_xs" style="" field="title3">Курсы английского языка в Алматы</div>
-                        <div class="t608__descr t-descr t-descr_xs" style="" field="descr3">Разговорный английский для детей Алматы!</div>
+                        <div class="t608__title t-heading t-heading_xs" style="" field="title3">Курсы английского языка</div>
+                        <div class="t608__descr t-descr t-descr_xs" style="" field="descr3">Разговорный английский для детей!</div>
                         <a href="eng.html" target="" class="t608__btn t-btn t-btn_sm" style="color:#0e2575;border:1px solid #0e2575;border-radius:25px; -moz-border-radius:25px; -webkit-border-radius:25px;">
                             <table style="width:100%; height:100%;">
                                 <tr>
@@ -346,7 +353,7 @@
                                 <li>При посещении нескольких курсов, действует гибкая система скидок.</li>
                             </ul>
                         </div>
-                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
+                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                             <table style="width:100%; height:100%;">
                                 <tr>
                                     <td>ПОЛУЧИТЬ</td>
@@ -363,7 +370,7 @@
                                 <li>Запишись до конца месяца и получи скидку 15% до конца срока обучения.</li>
                             </ul>
                         </div>
-                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
+                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                             <table style="width:100%; height:100%;">
                                 <tr>
                                     <td>ПОЛУЧИТЬ</td>
@@ -376,7 +383,7 @@
                     <div class="t599__content" style="border: 1px solid #e0e6ed; border-radius: 9px;">
                         <div class="t599__title t-name t-name_lg" field="title3" style="">Грант</div>
                         <div class="t599__descr t-descr t-descr_xs" field="descr3" style="">Предоставление грантов соцуязвимым слоям населения.</div>
-                        <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
+                        <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t599__btn t-btn t-btn_sm" style="color:#ffffff;background-color:#0e2575;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                             <table style="width:100%; height:100%;">
                                 <tr>
                                     <td>ПОЛУЧИТЬ</td>
@@ -411,7 +418,7 @@
                                             <svg class="t581__arrow-icon " style="fill:#ffe100; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 180">
                                                 <path d="M54.1 108c-.5 0-.9-.2-1.2-.6-.5-.7-.3-1.6.4-2.1 1.5-1 9.5-5.5 14.6-8.3-17.4-.5-31.3-7.3-41.3-20C9.9 55.7 9.5 24.2 14.2 3.7c.2-.8 1-1.3 1.8-1.1.8.2 1.3 1 1.1 1.8-4.6 19.9-4.2 50.3 11.8 70.8 9.5 12.2 23 18.6 39.9 18.9h.3l-3.2-4c-1.4-1.7-2.7-3.3-4.1-5.1-.7-.9-1.5-1.9-2.3-2.9-.5-.6-.4-1.6.2-2.1.6-.5 1.6-.4 2.1.2 0 0 0 .1.1.1l6.4 7.9c.5.6.9 1.1 1.4 1.7 1.5 1.8 3.1 3.6 4.3 5.5 0 .1.1.1.1.2.1.2.1.3.2.5v.3c0 .2 0 .3-.1.5 0 .1-.1.1-.1.2-.1.2-.2.3-.3.4-.1.1-.2.1-.3.2 0 0-.1 0-.2.1-.9.4-16 8.6-18.2 10.1-.4 0-.7.1-1 .1z" />
                                             </svg>
-                                            <a href="https://goo.gl/forms/Xx2xlDpnBkjqeBjm1" target="" class="t581__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
+                                            <a href="https://forms.gle/drPNzBL845d51X936" target="" class="t581__btn t-btn " style="color:#ffffff;background-color:#0e2575;border-radius:100px; -moz-border-radius:100px; -webkit-border-radius:100px;">
                                                 <table style="width:100%; height:100%;">
                                                     <tr>
                                                         <td>ЗАПИСАТЬСЯ</td>
@@ -606,6 +613,7 @@
 <script type="text/javascript">
     if (! window.mainTracker) { window.mainTracker = 'tilda'; }	(function (d, w, k, o, g) { var n=d.getElementsByTagName(o)[0],s=d.createElement(o),f=function(){n.parentNode.insertBefore(s,n);}; s.type = "text/javascript"; s.async = true; s.key = k; s.id = "tildastatscript"; s.src=g; if (w.opera=="[object Opera]") {d.addEventListener("DOMContentLoaded", f, false);} else { f(); } })(document, window, '774687a6a838300c919795858b834b19','script','https://stat.tildacdn.com/js/tildastat-0.2.min.js');
 </script>
+</div>
 </body>
 
 </html>
