--- a/eng.html
+++ b/eng.html
@@ -40,7 +40,7 @@
     <div id="rec58504373" class="r t-rec" style=" " data-animationappear="off" data-record-type="205">
         <!-- cover -->
         <div class="t-cover" id="recorddiv58504373" bgimgfield="img" style="height:100vh; background-image:url('images/tild6532-6236-4232-b635-653736353832__-__resize__20x__iStock_82512473_MEDI.jpg');">
-            <div class="t-cover__carrier" id="coverCarry58504373" data-content-cover-id="58504373" data-content-cover-bg="images/tild6532-6236-4232-b635-653736353832__istock_82512473_medi.jpg" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
+            <div class="t-cover__carrier" id="coverCarry58504373" data-content-cover-id="58504373" data-content-cover-bg="images/eng3.jpg" data-content-cover-height="100vh" data-content-cover-parallax="" style="height:100vh;background-attachment:scroll; "></div>
             <div class="t-cover__filter" style="height:100vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -o-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));background-image: linear-gradient(top, rgba(0,0,0,0.70), rgba(0,0,0,0.80));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#4c000000', endColorstr='#33000000');"></div>
             <div class="t-container">
                 <div class="t-width t-width_10" style="margin:0 auto;">
