--- a/busi.html
+++ b/busi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Курсы бизнес-мышление Алматы</title>
+    <title>Курсы бизнес-мышление Бишкек</title>
     <meta property="og:url" content="busi" />
     <meta property="og:title" content="Бизнес-мышление" />
     <meta property="og:description" content="Бизнес мышление для Ваших детей!" />
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <meta name="description" content="Бизнес мышление для Ваших детей!" />
-    <meta name="keywords" content="бизнесмышление для детей, курсы бизнесмышления для детей в Алматы, курсы для детей, курсы в Алматы" />
+    <meta name="keywords" content="бизнесмышление для детей, курсы бизнесмышления для детей в Бишкек, курсы для детей, курсы в Бишкек" />
     <link rel="canonical" href="busi">
     <link rel="shortcut icon" href="images/tildafavicon.ico" type="image/x-icon" />
     <!-- Assets -->
@@ -99,7 +99,7 @@
                                     <ul>
                                         <li><strong>Возраст: </strong>13-18 лет</li>
                                         <li><strong data-redactor-tag="strong">Продолжительность: </strong>6-12 месяцев</li>
-                                        <li><strong>Стоимость: </strong>20000 тенге</li>
+                                        <li><strong>Стоимость: </strong>3000 сом</li>
                                         <li><strong>Описание: </strong>Вне зависимости от того кем ребенок хочет стать в будущем, бизнес-мышление,
                                             социальные и предпринимательские навыки пригодятся ему в жизни. И конечно, развивать их необходимо уже с детства. Наш курс поможет выработать в
                                             детях ответственность, критическое мышление и все то, что необходимо будущему предпринимателю. Укрепите его уверенность в себе!</li>
