--- a/eng.html
+++ b/eng.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Курсы английского языка Алматы</title>
+    <title>Курсы английского языка Бишкек</title>
     <meta property="og:url" content="eng" />
     <meta property="og:title" content="Английский язык" />
     <meta property="og:description" content="English Club для ваших детей!" />
@@ -15,7 +15,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <meta name="description" content="English Club для ваших детей!" />
-    <meta name="keywords" content="английский для детей, курсы английского языка для детей в Алматы, английский с нуля, английский для новичков, курсы английского, разговорный английский, английский язык учить, английский язык курсы Алматы, английский язык Алматы, английский язык в Алматы" />
+    <meta name="keywords" content="английский для детей, курсы английского языка для детей в Бишкеке, английский с нуля, английский для новичков, курсы английского, разговорный английский, английский язык учить, английский язык курсы Бишкек, английский язык Бишкек, английский язык в Бишкек" />
     <link rel="canonical" href="eng">
     <link rel="shortcut icon" href="images/tildafavicon.ico" type="image/x-icon" />
     <!-- Assets -->
@@ -98,7 +98,7 @@
                                     <ul>
                                         <li><strong>Возраст:</strong> 7-18 лет</li>
                                         <li><strong>Продолжительность: </strong>4+ месяцев</li>
-                                        <li><strong>Стоимость:</strong> 15000 тенге</li>
+                                        <li><strong>Стоимость:</strong> 2500 сом</li>
                                         <li><strong>Описание:</strong>
                                             Значение английского языка для детей и взрослых в современном мире трудно переоценить.
                                             Каждый успешный человек должен знать его. Курсы английского языка в
@@ -237,7 +237,7 @@
                             <div class="t-text t-text_md" style="" field="text">
                                 <!--0550-56-10-00<br />-->
                                 <a href="mailto:space.school.kz@gmail.com">space.school.kz@gmail.com</a>
-                                <!--<br />4 микрорайон, дом 49/1, Алматы<br />-->
+                                <!--<br />4 микрорайон, дом 49/1, Бишкек<br />-->
                             </div>
                             <div class="t-sociallinks">
                                 <div class="t-sociallinks__wrapper">
