--- a/eng.html
+++ b/eng.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Английский язык" />
     <meta property="og:description" content="English Club для ваших детей!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/tild6532-6236-4232-b635-653736353832__-__resize__504x__iStock_82512473_MEDI.jpg" />
+    <meta property="og:image" content="https://teacherspaceschool.github.io/spaceSchool/images/tild3061-6665-4036-b833-633039666134__logo_space_school1.png" />
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
