--- a/busi.html
+++ b/busi.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Бизнес-мышление" />
     <meta property="og:description" content="Бизнес мышление для Ваших детей!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/tild3233-6532-4063-a538-623530613764__-__resize__504x__AdobeStock_66749706.png" />
+    <meta property="og:image" content="https://teacherspaceschool.github.io/spaceSchool/images/tild3061-6665-4036-b833-633039666134__logo_space_school1.png" />
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
