--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="SPACE SCHOOL | Курсы программирования в Бишкеке" />
     <meta property="og:description" content="Курсы программирования на Scratch, HTML, JavaScript, Android для детей, школьников, студентов и взрослых. Научитесь программировать игры, сайты и приложения с нуля. Программирование с нуля. В Бишкек." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/tild3061-6665-4036-b833-633039666134__logo_space_school1.png" />
+    <meta property="og:image" content="https://teacherspaceschool.github.io/spaceSchool/images/tild3061-6665-4036-b833-633039666134__logo_space_school1.png" />
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
