--- a/prog.html
+++ b/prog.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Программирование" />
     <meta property="og:description" content="Мы учим программированию с 7 до 18 лет!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/tild6238-3063-4234-b233-373130663666__-__resize__504x__1-UcpODv1lxR_Bt3MyaO.jpeg" />
+    <meta property="og:image" content="https://teacherspaceschool.github.io/spaceSchool/images/tild3061-6665-4036-b833-633039666134__logo_space_school1.png" />
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
